istiofiles/virtual-service-recommendation-virtualized.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - match:
    - sourceLabels:
        app: preference
        version: v2
    route:
    - destination:
        host: recommendation
        subset: version-virtualized
  - route:
    - destination:
        host: recommendation
        subset: version-v1
---
